# yolo-attnopt

./: LICENSE  README.md  demo.py  dev_runall.sh  pyproject.toml  run_tests.py
benchmark_tools/: benchmark_allcombs.sh  main_benchmark.py  streamlit_app.py  yolo_performance_analyzer.py
tests/docs/: TESTING_README.md  UNIT_TEST_IMPLEMENTATION_SUMMARY.md  UNIT_TEST_IMPLEMENTATION_SUMMARY_streamlit_app.md  UNIT_TEST_SUMMARY.md  UNIT_TEST_SUMMARY_main_benchmark.md  UNIT_TEST_SUMMARY_memprofile.md
tests/integration/: test_main_benchmark.py  test_streamlit_app.py
tests/unit/: test_attention_optimization.py  test_memprofile.py  test_yolo_performance_analyzer.py
yolo_attnopt/: __init__.py  attention_optimization.py  memprofile.py
