[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yolo-attnopt"
version = "0.0.1"
description = "Ultralytics YOLO project with benchmarking tools"
authors = [
    {name = "Divakar Roy", email = "droygatech@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["yolo", "ultralytics", "computer-vision", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "torch>=2.0.0",
    "ultralytics>=8.0.0",
    "imagesize>=1.3.0",
]

[project.optional-dependencies]
benchmark = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "streamlit",
    "Pillow",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "unittest-xml-reporting>=3.2.0",
    "coverage>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "benchmark_tools*"]

